--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="나와 고양이의 궁합을 보는 MBTI 테스트 입니다."
+    />
+    <meta property="og:image" content="https://catmbtl.netlify.app/cat.png" />
+    <meta property="og:url" content="https://catmbtl.netlify.app/" />
+    <title>고양이MBTI</title>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"></script>
   </head>
   <body>
