--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <meta property="og:url" content="https://catmbtl.netlify.app/" />
     <title>고양이MBTI</title>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"></script>
+    <ins
+      class="kakao_ad_area"
+      style="display: none"
+      data-ad-unit="DAN-fs2IIlhBT7MxW5Uq"
+      data-ad-width="320"
+      data-ad-height="100"
+    ></ins>
+    <script
+      type="text/javascript"
+      src="//t1.daumcdn.net/kas/static/ba.min.js"
+      async
+    ></script>
   </head>
   <body>
     <div id="root"></div>
