--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       content="나와 고양이의 궁합을 보는 MBTI 테스트 입니다."
     />
     <meta property="og:image" content="https://catmbtl.netlify.app/cat.png" />
+    <meta
+      property="og:title"
+      content="나와 고양이의 궁합을 보는 MBTI 테스트 입니다."
+    />
+    <meta
+      property="og:description"
+      content="고양이를 사랑하는 집사님들에게 바치는 소중한 고양이 MBTI앱"
+    />
     <meta property="og:url" content="https://catmbtl.netlify.app/" />
     <title>고양이MBTI</title>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"></script>
